...
                            ),
                          ),
                          child: Text(
                            mode == 'games'
                                ? 'Games'
                                : mode == 'films'
                                ? 'Films'
                                : 'Engine',
                          ),
                        ),
                      ),
                    ),
                  ],
...
