...
                      children: [
                        Pill(
                          title == null
                              ? 'Meet Ryhze'
                              : title.isGame
                              ? 'Explore the game'
                              : 'Explore the film',
                          primary: true,
                          icon: Icons.arrow_forward,
                          reduced: state.reduced,
                          onPressed: () => title == null
                              ? navigate('about')
                              : open(title, 'hero-${title.id}'),
...
